--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -149,15 +149,15 @@
   --qc-spacer-content-block-mb: var(--qc-spacer-md);
   --qc-spacer-list-pl: var(--qc-spacer-sm);
   --qc-spacer-list-item-mb: var(--qc-spacer-sm);
-  --qc-size-textfield-sm: 6.3rem;
-  --qc-size-textfield-md: 15.6rem;
-  --qc-size-textfield-lg: 24.9rem;
-  --qc-size-textfield-xl: 52.8rem;
-  --qc-size-textfield-xxl: 82.5rem;
-  --qc-size-input-default: lg;
-  --qc-size-textarea-default: xl;
-  --qc-size-textarea-default-min-height: 10.8rem;
-  --qc-size-searchbar-default: 64rem;
+  --qc-size-max-width-sm: 6.3rem;
+  --qc-size-max-width-md: 15.6rem;
+  --qc-size-max-width-lg: 24.9rem;
+  --qc-size-max-width-xl: 52.8rem;
+  --qc-size-max-width-xxl: 82.5rem;
+  --qc-size-input-max-width: var(--qc-size-max-width-lg);
+  --qc-size-textarea-max-width: var(--qc-size-max-width-xl);
+  --qc-size-textarea-min-height: 10.8rem;
+  --qc-size-search-bar-max-width: 64rem;
   --qc-grid-gutter: 32px;
   --qc-grid-breakpoint-xs: 0;
   --qc-grid-breakpoint-sm: 768px;
