Boutons - retrait du style bouton de la doc pour se baser sur ceux de qc-button ;   mise à jour des exemples et ajustements par les ancres.

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2763,3 +2763,6 @@ qc-textfield textarea + .qc-textfield-charcount {
   box-shadow: none;
   opacity: 1;
 }
+a.qc-button {
+  text-decoration: none;
+}
