--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2763,6 +2763,9 @@ qc-textfield textarea + .qc-textfield-charcount {
   box-shadow: none;
   opacity: 1;
 }
+a.qc-button {
+  text-decoration: none;
+}
 
 .qc-container,
 .qc-container-fluid,
