--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -58,7 +58,7 @@
     </button>
 </qc-doc-exemple>
 
-<qc-doc-exemple caption="Exemples de boutons simples avec leur variant compacte.">
+<qc-doc-exemple caption="Exemples de boutons simples avec leur variante compacte.">
     <div>
         <button class="qc-button qc-simple">
             <qc-icon type="information"></qc-icon>
@@ -81,6 +81,16 @@
             Action
         </button>
     </div>
+</qc-doc-exemple>
+
+<qc-doc-exemple caption="Exemples avec un lien et un champ de soumission">
+        <a href="javascript:void(0);"
+           class="qc-button qc-primary"
+           role="button"
+        >
+            Action
+        </a>
+        <input type="submit" value="Action" class="qc-button qc-primary" />
 </qc-doc-exemple>
 
 
