--- a/src/sdg/components/ChoiceGroup/_choiceGroup.html
+++ b/src/sdg/components/ChoiceGroup/_choiceGroup.html
@@ -160,7 +160,7 @@
 
     </qc-choice-group>
 
-    <button class="btn btn-sm btn-primary" type="submit">
+    <button class="qc-button qc-primary qc-compact" type="submit">
       Soumettre
     </button>
   </form>
