--- a/src/sdg/components/DropdownList/dropdownListTest.html
+++ b/src/sdg/components/DropdownList/dropdownListTest.html
@@ -136,7 +136,7 @@
     <qc-option value="Bas-Saint-Laurent">Bas-Saint-Laurent</qc-option>
   </qc-dropdown-list>
 
-  <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
+  <button type="submit" class="qc-button qc-primary qc-compact">Envoyer</button>
 </form>
 
 <script>
