--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -54,7 +54,7 @@
       <textarea name="zone-xxl"></textarea>
     </qc-textfield>
 
-    <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
+    <button type="submit" class="qc-button qc-primary qc-compact">Envoyer</button>
   </form>
 
   <script>
