--- a/src/sdg/components/Checkbox/_checkbox.html
+++ b/src/sdg/components/Checkbox/_checkbox.html
@@ -15,7 +15,7 @@
       </label>
     </qc-checkbox>
 
-    <button class="btn btn-sm btn-primary"
+    <button class="qc-button qc-primary qc-compact"
             type="submit">
       S'inscrire
     </button>
