--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -170,13 +170,13 @@
   --qc-spacer-content-block-mb: var(--qc-spacer-md);
   --qc-spacer-list-pl: var(--qc-spacer-sm);
   --qc-spacer-list-item-mb: var(--qc-spacer-sm);
-  --qc-size-max-width-sm: 6.3rem;
-  --qc-size-max-width-md: 15.6rem;
-  --qc-size-max-width-lg: 24.9rem;
-  --qc-size-max-width-xl: 52.8rem;
-  --qc-size-max-width-xxl: 82.5rem;
-  --qc-size-input-max-width: var(--qc-size-max-width-lg);
-  --qc-size-textarea-max-width: var(--qc-size-max-width-xl);
+  --qc-size-max-width-xs: 6.3rem;
+  --qc-size-max-width-sm: 15.6rem;
+  --qc-size-max-width-md: 24.9rem;
+  --qc-size-max-width-lg: 52.8rem;
+  --qc-size-max-width-xl: 82.5rem;
+  --qc-size-input-max-width: var(--qc-size-max-width-md);
+  --qc-size-textarea-max-width: var(--qc-size-max-width-lg);
   --qc-size-textarea-min-height: 10.8rem;
   --qc-size-search-bar-max-width: 64rem;
   --qc-grid-gutter: 32px;
@@ -2545,23 +2545,24 @@ li[aria-selected=true] {
   transform: rotate(180deg);
 }
 
-.qc-textfield-container {
+.qc-dropdown-list-container {
   margin-bottom: 3.2rem;
 }
-.qc-textfield-container-xs {
-  max-width: var(--qc-spacer-input-xs);
+
+.qc-dropdown-list-container-xs {
+  max-width: var(--qc-size-max-width-xs);
 }
-.qc-textfield-container-sm {
-  max-width: var(--qc-spacer-input-sm);
+.qc-dropdown-list-container-sm {
+  max-width: var(--qc-size-max-width-sm);
 }
-.qc-textfield-container-md {
-  max-width: var(--qc-spacer-input-md);
+.qc-dropdown-list-container-md {
+  max-width: var(--qc-size-max-width-md);
 }
-.qc-textfield-container-lg {
-  max-width: var(--qc-spacer-input-lg);
+.qc-dropdown-list-container-lg {
+  max-width: var(--qc-size-max-width-lg);
 }
-.qc-textfield-container-xl {
-  max-width: var(--qc-spacer-input-xl);
+.qc-dropdown-list-container-xl {
+  max-width: var(--qc-size-max-width-xl);
 }
 
 .qc-dropdown-list-label-container {
