--- a/src/sdg/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/components/DropdownList/_dropdownList.scss
@@ -6,14 +6,16 @@
 $min-height: 40;
 $border: 1;
 
-.qc-textfield-container {
+.qc-dropdown-list-container {
   margin-bottom: rem(32);
+}
 
-  &-xs { max-width: token-value(spacer, input, xs); }
-  &-sm { max-width: token-value(spacer, input, sm); }
-  &-md { max-width: token-value(spacer, input, md); }
-  &-lg { max-width: token-value(spacer, input, lg); }
-  &-xl { max-width: token-value(spacer, input, xl); }
+.qc-dropdown-list-container {
+  &-xs { max-width: token-value(size, max-width, xs); }
+  &-sm { max-width: token-value(size, max-width, sm); }
+  &-md { max-width: token-value(size, max-width, md); }
+  &-lg { max-width: token-value(size, max-width, lg); }
+  &-xl { max-width: token-value(size, max-width, xl); }
 }
 
 .qc-dropdown-list-label-container {
