--- a/src/sdg/components/Icon/_icons.scss
+++ b/src/sdg/components/Icon/_icons.scss
@@ -1,5 +1,12 @@
 @use "qc-sdg-lib" as *;
 
+@each $name, $url in $images {
+  %icon-#{$name} {
+    mask-image: getImageUrl($name);
+  }
+}
+
+
 qc-icon {
   display: inline-flex;
   align-items: stretch;
@@ -24,11 +31,12 @@ qc-icon {
   }
   @each $name, $url in $images {
     &[data-img-type=#{$name}] {
-      mask-image: getImageUrl($name);
+      @extend %icon-#{$name};
     }
   }
   &.qc-icon-custom {
     mask-image: var(--img-src);
   }
 }
+
 
