--- a/src/sdg/components/Button/Test/buttonTest.html
+++ b/src/sdg/components/Button/Test/buttonTest.html
@@ -1,34 +1,310 @@
-<div>
-    <button class="qc-button qc-primary">Principal</button>
-    <button class="qc-button qc-primary qc-button-rounded">Principal</button>
-    <button class="qc-button qc-primary" disabled>Principal</button>
-    <button class="qc-button qc-primary qc-compact">Principal</button>
-    <button class="qc-button qc-primary qc-compact qc-button-rounded">Principal</button>
+<div class="qc-row">
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-primary">Principal</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-hover">Principal hover</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-active">Principal active</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-focus">Principal focus</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-disabled">Principal désactivé</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-secondary">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-hover">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-active">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-focus">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-disabled">Secondaire</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-tertiary">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-hover">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-active">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-focus">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-disabled">Tertiaire</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-danger">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-hover">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-active">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-focus">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-disabled">Avertissement</button>
+        </div>
+    </div>
 </div>
 
-<div>
-    <button class="qc-button qc-secondary">Secondaire</button>
-    <button class="qc-button qc-secondary qc-button-rounded">Secondaire</button>
-    <button class="qc-button qc-secondary" disabled>Secondaire</button>
-    <button class="qc-button qc-secondary qc-compact">Secondaire</button>
-    <button class="qc-button qc-secondary qc-compact qc-button-rounded">Secondaire</button>
+<br>
+<br>
+
+<div class="qc-row">
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-primary qc-button-rounded">Principal</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-hover qc-button-rounded">Principal hover</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-active qc-button-rounded">Principal active</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-focus qc-button-rounded">Principal focus</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-disabled qc-button-rounded">Principal désactivé</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-secondary qc-button-rounded">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-hover qc-button-rounded">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-active qc-button-rounded">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-focus qc-button-rounded">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-disabled qc-button-rounded">Secondaire</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-tertiary qc-button-rounded">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-hover qc-button-rounded">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-active qc-button-rounded">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-focus qc-button-rounded">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-disabled qc-button-rounded">Tertiaire</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-danger qc-button-rounded">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-hover qc-button-rounded">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-active qc-button-rounded">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-focus qc-button-rounded">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-disabled qc-button-rounded">Avertissement</button>
+        </div>
+    </div>
 </div>
 
-<div>
-    <button class="qc-button qc-tertiary">Tertiaire</button>
-    <button class="qc-button qc-tertiary qc-button-rounded">Tertiaire</button>
-    <button class="qc-button qc-tertiary" disabled>Tertiaire</button>
-    <button class="qc-button qc-tertiary qc-compact">Tertiaire</button>
-    <button class="qc-button qc-tertiary qc-compact qc-button-rounded">Tertiaire</button>
+<br>
+<br>
+
+<div class="qc-row">
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-primary qc-compact">Principal</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-hover qc-compact">Principal hover</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-active qc-compact">Principal active</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-focus qc-compact">Principal focus</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-disabled qc-compact">Principal désactivé</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-secondary qc-compact">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-hover qc-compact">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-active qc-compact">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-focus qc-compact">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-disabled qc-compact">Secondaire</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-tertiary qc-compact">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-hover qc-compact">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-active qc-compact">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-focus qc-compact">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-disabled qc-compact">Tertiaire</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-danger qc-compact">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-hover qc-compact">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-active qc-compact">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-focus qc-compact">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-disabled qc-compact">Avertissement</button>
+        </div>
+    </div>
 </div>
 
-<div>
-    <button class="qc-button qc-danger">Avertissement</button>
-    <button class="qc-button qc-danger qc-button-rounded">Avertissement</button>
-    <button class="qc-button qc-danger" disabled>Avertissement</button>
-    <button class="qc-button qc-danger qc-compact">Avertissement</button>
-    <button class="qc-button qc-danger qc-compact qc-button-rounded">Avertissement</button>
+<br>
+<br>
+
+<div class="qc-row">
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-primary qc-button-rounded qc-compact">Principal</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-hover qc-button-rounded qc-compact">Principal hover</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-active qc-button-rounded qc-compact">Principal active</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-focus qc-button-rounded qc-compact">Principal focus</button>
+        </div>
+        <div>
+            <button class="qc-button qc-primary qc-disabled qc-button-rounded qc-compact">Principal désactivé</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-secondary qc-button-rounded qc-compact">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-hover qc-button-rounded qc-compact">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-active qc-button-rounded qc-compact">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-focus qc-button-rounded qc-compact">Secondaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-secondary qc-disabled qc-button-rounded qc-compact">Secondaire</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-tertiary qc-button-rounded qc-compact">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-hover qc-button-rounded qc-compact">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-active qc-button-rounded qc-compact">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-focus qc-button-rounded qc-compact">Tertiaire</button>
+        </div>
+        <div>
+            <button class="qc-button qc-tertiary qc-disabled qc-button-rounded qc-compact">Tertiaire</button>
+        </div>
+    </div>
+
+    <div class="qc-col-sm-12 qc-col-lg-3">
+        <div>
+            <button class="qc-button qc-danger qc-button-rounded qc-compact">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-hover qc-button-rounded qc-compact">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-active qc-button-rounded qc-compact">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-focus qc-button-rounded qc-compact">Avertissement</button>
+        </div>
+        <div>
+            <button class="qc-button qc-danger qc-disabled qc-button-rounded qc-compact">Avertissement</button>
+        </div>
+    </div>
 </div>
+
+<br>
+<br>
 
 <div>
     <button class="qc-button qc-primary">
@@ -70,5 +346,4 @@
         <qc-icon type="plus"></qc-icon>
         Action
     </button>
-
 </div>
