--- a/src/sdg/components/DropdownList/Test/dropdownListTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListTest.html
@@ -1,24 +1,46 @@
-<qc-dropdown-list
-        id="dropdown-list-single-choice"
-        label="Choix unique:"
->
-  <qc-option value="1" selected>Option 1</qc-option>
-  <qc-option value="2">Option 2</qc-option>
-  <qc-option value="3">Option 3</qc-option>
-  <qc-option value="4">Option 4</qc-option>
-  <qc-option value="5">Option 5</qc-option>
-  <qc-option value="6">Option 6</qc-option>
-  <qc-option value="7">Option 7</qc-option>
-  <qc-option value="8">Option 8</qc-option>
-  <qc-option value="9">Option 9</qc-option>
-  <qc-option value="10">Option 10</qc-option>
-  <qc-option value="11">Option 11</qc-option>
-  <qc-option value="12">Option 12</qc-option>
-  <qc-option value="13">Option 13</qc-option>
-  <qc-option value="14">Option 14</qc-option>
-  <qc-option value="15">Option 15</qc-option>
-  <qc-option value="16" disabled>Option 16 (désactivée)</qc-option>
-</qc-dropdown-list>
+<!--<qc-dropdown-list-->
+<!--        id="dropdown-list-single-choice"-->
+<!--        label="Choix unique:"-->
+<!--&gt;-->
+<!--  <qc-option value="1" selected>Option 1</qc-option>-->
+<!--  <qc-option value="2">Option 2</qc-option>-->
+<!--  <qc-option value="3">Option 3</qc-option>-->
+<!--  <qc-option value="4">Option 4</qc-option>-->
+<!--  <qc-option value="5">Option 5</qc-option>-->
+<!--  <qc-option value="6">Option 6</qc-option>-->
+<!--  <qc-option value="7">Option 7</qc-option>-->
+<!--  <qc-option value="8">Option 8</qc-option>-->
+<!--  <qc-option value="9">Option 9</qc-option>-->
+<!--  <qc-option value="10">Option 10</qc-option>-->
+<!--  <qc-option value="11">Option 11</qc-option>-->
+<!--  <qc-option value="12">Option 12</qc-option>-->
+<!--  <qc-option value="13">Option 13</qc-option>-->
+<!--  <qc-option value="14">Option 14</qc-option>-->
+<!--  <qc-option value="15">Option 15</qc-option>-->
+<!--  <qc-option value="16" disabled>Option 16 (désactivée)</qc-option>-->
+<!--</qc-dropdown-list>-->
+
+<qc-select id="qc-select-single-choice">
+  <label for="select-single-choice">Choix unique</label>
+  <select id="select-single-choice">
+    <option value="1" selected>Option 1</option>
+    <option value="2">Option 2</option>
+    <option value="3">Option 3</option>
+    <option value="4">Option 4</option>
+    <option value="5">Option 5</option>
+    <option value="6">Option 6</option>
+    <option value="7">Option 7</option>
+    <option value="8">Option 8</option>
+    <option value="9">Option 9</option>
+    <option value="10">Option 10</option>
+    <option value="11">Option 11</option>
+    <option value="12">Option 12</option>
+    <option value="13">Option 13</option>
+    <option value="14">Option 14</option>
+    <option value="15">Option 15</option>
+    <option value="16" disabled>Option 16 (désactivée)</option>
+  </select>
+</qc-select>
 
 
 <div style="height: 40rem;">
