Icône - déplacement des classes abstraites des icônes dans _mixins pour les icônes générées dynamiquement et mise à jour du CSS avec des icônes en base64.

--- a/src/sdg/scss/lib/_mixins.scss
+++ b/src/sdg/scss/lib/_mixins.scss
@@ -196,4 +196,11 @@
     @content;
   }
 }
+// classes pour les icônes
+@each $name, $url in $images {
+  %icon-#{$name} {
+    mask-image: getImageUrl($name);
+  }
+}
+
 
