--- a/src/sdg/components/DropdownList/Test/dropdownListTest.html
+++ b/src/sdg/components/DropdownList/Test/dropdownListTest.html
@@ -1,25 +1,3 @@
-<!--<qc-dropdown-list-->
-<!--        id="dropdown-list-single-choice"-->
-<!--        label="Choix unique:"-->
-<!--&gt;-->
-<!--  <qc-option value="1" selected>Option 1</qc-option>-->
-<!--  <qc-option value="2">Option 2</qc-option>-->
-<!--  <qc-option value="3">Option 3</qc-option>-->
-<!--  <qc-option value="4">Option 4</qc-option>-->
-<!--  <qc-option value="5">Option 5</qc-option>-->
-<!--  <qc-option value="6">Option 6</qc-option>-->
-<!--  <qc-option value="7">Option 7</qc-option>-->
-<!--  <qc-option value="8">Option 8</qc-option>-->
-<!--  <qc-option value="9">Option 9</qc-option>-->
-<!--  <qc-option value="10">Option 10</qc-option>-->
-<!--  <qc-option value="11">Option 11</qc-option>-->
-<!--  <qc-option value="12">Option 12</qc-option>-->
-<!--  <qc-option value="13">Option 13</qc-option>-->
-<!--  <qc-option value="14">Option 14</qc-option>-->
-<!--  <qc-option value="15">Option 15</qc-option>-->
-<!--  <qc-option value="16" disabled>Option 16 (désactivée)</qc-option>-->
-<!--</qc-dropdown-list>-->
-
 <qc-select id="qc-select-single-choice">
   <label for="select-single-choice">Choix unique</label>
   <select id="select-single-choice">
@@ -42,123 +20,123 @@
   </select>
 </qc-select>
 
-
 <div style="height: 40rem;">
-<qc-dropdown-list
-        id="dropdown-list-single-choice-no-scroll"
-        label="Choix unique avec recherche"
-        enable-search
->
-  <qc-option value="1" selected>Option 1</qc-option>
-  <qc-option value="2">Option 2</qc-option>
-  <qc-option value="3">Option 3</qc-option>
-  <qc-option value="4">Option 4</qc-option>
-  <qc-option value="5">Option 5</qc-option>
-  <qc-option value="6">Option 6</qc-option>
-  <qc-option value="7">Option 7</qc-option>
-  <qc-option value="8">Option 8</qc-option>
-  <qc-option value="9">Option 9</qc-option>
-  <qc-option value="10">Option 10</qc-option>
-  <qc-option value="11">Option 11</qc-option>
-  <qc-option value="12">Option 12</qc-option>
-  <qc-option value="13">Option 13</qc-option>
-  <qc-option value="14">Option 14</qc-option>
-  <qc-option value="15">Option 15</qc-option>
-  <qc-option value="16">Option 16</qc-option>
-</qc-dropdown-list>
+  <qc-select id="qc-select-single-choice-search" enable-search>
+    <label for="select-single-choice-search">Choix unique avec recherche</label>
+    <select id="select-single-choice-search">
+      <option value="1" selected>Option 1</option>
+      <option value="2">Option 2</option>
+      <option value="3">Option 3</option>
+      <option value="4">Option 4</option>
+      <option value="5">Option 5</option>
+      <option value="6">Option 6</option>
+      <option value="7">Option 7</option>
+      <option value="8">Option 8</option>
+      <option value="9">Option 9</option>
+      <option value="10">Option 10</option>
+      <option value="11">Option 11</option>
+      <option value="12">Option 12</option>
+      <option value="13">Option 13</option>
+      <option value="14">Option 14</option>
+      <option value="15">Option 15</option>
+      <option value="16" >Option 16</option>
+    </select>
+  </qc-select>
 </div>
 
-<qc-dropdown-list
-        id="dropdown-list-multiple-choices"
-        label="Choix multiples"
-        multiple
->
-  <qc-option value="1">Option 1</qc-option>
-  <qc-option value="2">Option 2</qc-option>
-  <qc-option value="3">Option 3</qc-option>
-  <qc-option value="4">Option 4</qc-option>
-  <qc-option value="5">Option 5</qc-option>
-  <qc-option value="6">Option 6</qc-option>
-  <qc-option value="7">Option 7</qc-option>
-  <qc-option value="8">Option 8</qc-option>
-  <qc-option value="9">Option 9</qc-option>
-  <qc-option value="10">Option 10</qc-option>
-  <qc-option value="11">Option 11</qc-option>
-  <qc-option value="12">Option 12</qc-option>
-  <qc-option value="13">Option 13</qc-option>
-  <qc-option value="14">Option 14</qc-option>
-  <qc-option value="15">Option 15</qc-option>
-  <qc-option value="16" disabled>Option 16 (désactivée)</qc-option>
-</qc-dropdown-list>
+<qc-select id="qc-select-multiple-choices" multiple>
+  <label for="select-multiple-choices">Choix multiple</label>
+  <select multiple id="select-multiple-choices">
+    <option value="1">Option 1</option>
+    <option value="2">Option 2</option>
+    <option value="3">Option 3</option>
+    <option value="4">Option 4</option>
+    <option value="5">Option 5</option>
+    <option value="6">Option 6</option>
+    <option value="7">Option 7</option>
+    <option value="8">Option 8</option>
+    <option value="9">Option 9</option>
+    <option value="10">Option 10</option>
+    <option value="11">Option 11</option>
+    <option value="12">Option 12</option>
+    <option value="13">Option 13</option>
+    <option value="14">Option 14</option>
+    <option value="15">Option 15</option>
+    <option value="16" disabled>Option 16 (désactivée)</option>
+  </select>
+</qc-select>
 
-<qc-dropdown-list
-        id="dropdown-list-invalid"
-        label="État invalide"
-        invalid
->
-  <qc-option value="1">Option 1</qc-option>
-  <qc-option value="2">Option 2</qc-option>
-  <qc-option value="3">Option 3</qc-option>
-  <qc-option value="4">Option 4</qc-option>
-  <qc-option value="5">Option 5</qc-option>
-  <qc-option value="6">Option 6</qc-option>
-  <qc-option value="7">Option 7</qc-option>
-  <qc-option value="8">Option 8</qc-option>
-  <qc-option value="9">Option 9</qc-option>
-  <qc-option value="10">Option 10</qc-option>
-  <qc-option value="11">Option 11</qc-option>
-  <qc-option value="12">Option 12</qc-option>
-  <qc-option value="13">Option 13</qc-option>
-  <qc-option value="14">Option 14</qc-option>
-  <qc-option value="15">Option 15</qc-option>
-  <qc-option value="16" disabled>Option 16 (désactivée)</qc-option>
-</qc-dropdown-list>
+<qc-select id="qc-select-invalid" multiple invalid>
+  <label for="select-invalid">État invalide</label>
+  <select multiple id="select-invalid">
+    <option value="1">Option 1</option>
+    <option value="2">Option 2</option>
+    <option value="3">Option 3</option>
+    <option value="4">Option 4</option>
+    <option value="5">Option 5</option>
+    <option value="6">Option 6</option>
+    <option value="7">Option 7</option>
+    <option value="8">Option 8</option>
+    <option value="9">Option 9</option>
+    <option value="10">Option 10</option>
+    <option value="11">Option 11</option>
+    <option value="12">Option 12</option>
+    <option value="13">Option 13</option>
+    <option value="14">Option 14</option>
+    <option value="15">Option 15</option>
+    <option value="16">Option 16</option>
+  </select>
+</qc-select>
 
-<qc-dropdown-list
-        id="dropdown-list-disabled"
-        label="Désactivé"
-        disabled
-></qc-dropdown-list>
+<qc-select id="qc-select-disabled" disabled>
+  <label for="select-disabled">Désactivé</label>
+  <select id="select-disabled">disabled</select>
+</qc-select>
 
 <form id="dropdown-list-form">
-  <qc-dropdown-list
+  <qc-select
           id="dropdown-list-restaurants"
-          label="Type de restaurant"
           placeholder="Type de restaurant"
+          multiple
           enable-search
           search-placeholder="Rechercher un type restaurant"
           required
           invalid-text="Veuillez choisir un type de restaurant."
   >
-    <qc-option value="Pizzeria">Pizzeria</qc-option>
-    <qc-option value="Pâtisserie">Pâtisserie</qc-option>
-    <qc-option value="Steakhouse">Steakhouse</qc-option>
-    <qc-option value="Bar">Bar</qc-option>
-    <qc-option value="Casse-croûte">Casse-croûte</qc-option>
-    <qc-option value="Boîte à pâtes">Boîte à pâtes</qc-option>
-    <qc-option value="Restaurant à burgers">Restaurant à burgers</qc-option>
-  </qc-dropdown-list>
+    <label for="dropdown-list-restaurants-select">Type de restaurant</label>
+    <select id="dropdown-list-restaurants-select" multiple>
+      <option value="Pizzeria">Pizzeria</option>
+      <option value="Pâtisserie">Pâtisserie</option>
+      <option value="Steakhouse">Steakhouse</option>
+      <option value="Bar">Bar</option>
+      <option value="Casse-croûte">Casse-croûte</option>
+      <option value="Boîte à pâtes">Boîte à pâtes</option>
+      <option value="Restaurant à burgers">Restaurant à burgers</option>
+    </select>
+  </qc-select>
 
-  <qc-dropdown-list
+  <qc-select
           id="dropdown-list-regions"
-          label="Régions desservies"
           placeholder="Sélectionner une région"
           width="lg"
           enable-search
           search-placeholder="Rechercher les régions"
           multiple
   >
-    <qc-option value="Capitale-nationale">Capitale-nationale</qc-option>
-    <qc-option value="Centre-du-Québec" selected>Centre-du-Québec</qc-option>
-    <qc-option value="Montérégie" selected>Montérégie</qc-option>
-    <qc-option value="Outaouais">Outaouais</qc-option>
-    <qc-option value="Saguenay-Lac-Saint-Jean">Saguenay-Lac-Saint-Jean</qc-option>
-    <qc-option value="Gaspésie-Îles-de-la-Madeleine">Gaspésie-Îles-de-la-Madeleine</qc-option>
-    <qc-option value="Nord-du-Québec">Nord-du-Québec</qc-option>
-    <qc-option value="Bas-Saint-Laurent">Bas-Saint-Laurent</qc-option>
-  </qc-dropdown-list>
+    <label for="dropdown-list-regions-select">Régions desservies</label>
+    <select id="dropdown-list-regions-select" multiple>
+      <option value="Capitale-nationale">Capitale-nationale</option>
+      <option value="Centre-du-Québec" selected>Centre-du-Québec</option>
+      <option value="Montérégie" selected>Montérégie</option>
+      <option value="Outaouais">Outaouais</option>
+      <option value="Saguenay-Lac-Saint-Jean">Saguenay-Lac-Saint-Jean</option>
+      <option value="Gaspésie-Îles-de-la-Madeleine">Gaspésie-Îles-de-la-Madeleine</option>
+      <option value="Nord-du-Québec">Nord-du-Québec</option>
+      <option value="Bas-Saint-Laurent">Bas-Saint-Laurent</option>
+    </select>
+  </qc-select>
 
-  <button type="submit" class="qc-button qc-primary qc-compact">Envoyer</button>
+  <button id="qc-select-form-test-submit" type="submit" class="qc-button qc-primary qc-compact">Envoyer</button>
 </form>
 
 <script>
@@ -169,12 +147,13 @@
 
     let isValid = true;
 
-    const requiredFields = dropdownListForm.querySelectorAll("qc-dropdown-list[required]");
+    const requiredFields = dropdownListForm.querySelectorAll("qc-select[required]");
+    console.log(requiredFields);
 
     requiredFields.forEach(field => {
-      const value = field.value?.trim();
+      const value = field.value;
 
-      if (!value) {
+      if (!value || value.length <= 0) {
         field.invalid = true;
         isValid = false;
       } else {
@@ -183,10 +162,10 @@
     });
 
     if (isValid) {
-      const formEntries = dropdownListForm.querySelectorAll("qc-dropdown-list");
+      const formEntries = dropdownListForm.querySelectorAll("qc-select");
       let alertParts = ["Formulaire soumis avec les données suivantes :"];
       formEntries.forEach((field) => {
-        alertParts.push(`${field.label}: ${field.value}`);
+        alertParts.push(`${field.label}: ${field.value.join(", ")}`);
       });
       alert(alertParts.join("\n"));
     }
